# ecopuntos1.0

./: .env  .env.example  .gitignore  Dockerfile  GESTION_USUARIOS_README.md  MEJORAS_ECOBOT.md  README.md  check_materials.py  check_points.py  crear_conductor.py  db.sqlite3  docker-compose.yml  limpiar_basura.ps1  limpiar_chat_states.py  manage_dev.py  nginx.conf  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run-design-tests.js  setup-design-tests.js  setup.py  setup_gemini.ps1  test_add_points.py  test_chat_system.py  test_estado_aprobado.py  test_flujo_completo.py  test_gemini_chatbot.py  test_interfaz_reagendamiento.py  test_legal_pages.py  test_session_closure.py  test_suspension_logic.py  test_terminos_sistema.py  test_throttling.py  test_url_reagendamiento.py  (+2 more)
.github/workflows/: ci.yml
api/: serializers.py  tests.py  urls.py  views.py
core/: admin.py  api_clear_notifications.py  configuration.py  consumers.py  dynamic_session_middleware.py  email_backend.py  forms.py  middleware.py  models.py  notifications.py  password_recovery.py  permissions.py  ratelimit.py  redemptions.py  routing.py  security.py  serializers.py  session_cleanup.py  session_security.py  session_validation_middleware.py  simple_throttle.py  tests.py  urls.py  views.py  views_superuser.py
core/chatbot/: __init__.py  consumers.py  views.py
core/chatbot/services/: __init__.py  ai_service.py  gemini_ai_service.py  simple_ai_service.py  test_service.py
core/chatbot/utils/: __init__.py  intent_detector.py  prompts.py
core/management/commands/: __init__.py  cleanup_sessions.py  createsuperuser_ecopuntos.py  populate_recompensas.py  test_email.py
core/migrations/: 0019_usuario_level.py  0020_alter_usuario_foto_perfil.py  0021_usuario_puntos_juego.py  0022_usuario_puntos_juego_vidrios.py  0023_usuario_puntos_juego_papel.py  0024_usuario_puntos_juego_metales.py  0025_notificacion_tipo_notificacion_titulo.py  0026_alter_usuario_level.py  0027_recompensa_categoria_recompensa_es_nuevo_and_more.py  0029_usuario_suspended.py  0030_configuracion.py  0031_usuario_fecha_aceptacion_terminos_and_more.py  0032_canje_direccion_recoleccion_and_more.py  0033_fix_estado_max_length.py  0034_alter_usuario_role.py  0034_chatmessage.py  0035_merge_0034_alter_usuario_role_0034_chatmessage.py  0036_movimientostock_delete_chatmessage.py  0037_alter_usuario_email.py  0038_seguimientorecompensa_historialseguimiento.py  0039_add_2fa_fields.py  0040_alter_usuario_role.py  0040_chatbot_models.py  0041_conversacionchatbot_estadisticaschatbot_and_more.py  0041_merge_0040_alter_usuario_role_0040_chatbot_models.py  0042_conversacionchatbot_fecha_actualizacion.py  0042_conversaciondirecta_solicitudsoporte_admin_asignado_and_more.py  0043_agregar_estado_aprobado.py  0044_eliminar_sistema_soporte_viejo.py
core/static/js/: password-recovery.js
core/templates/core/: base.html  base_admin.html  canjeadmin.html  canjes.html  categorias.html  chatbot_interface.html  contacto_legal.html  dashusuario.html  dashusuario_backup.html  dashusuario_refactored.html  estadisticasadmin.html  historial.html  index.html  inicioadmin.html  iniciosesion.html  juego_metales.html  juego_papel.html  juego_plasticos.html  juego_vidrios.html  logros.html  monitor_sesiones.html  notificaciones.html  pagos.html  panel_conductor.html  paneladmin.html  perfil.html  politica_privacidad.html  ranking.html  ratelimit_error.html  recompensas.html  recuperar_password.html  registrate.html  retiroadmin.html  rutas.html  rutasadmin.html  rutasusuario.html  rutasusuario_new.html  security_monitor.html  soportusu.html  stock_recompensas.html  (+6 more)
core/templates/emails/: base_email.html  bienvenida.html  canje_aprobado.html  canje_en_revision.html  canje_solicitado.html
core/templatetags/: math_filters.py
docs/: RATE_LIMITING.md
media/fotos_perfil/: images_2.jfif  images_5.jfif  images_6.jfif  images_aYxZXyg.jfif
proyecto2023/: asgi.py  email_backend.py  settings.py  settings_dev.py  urls.py
static/css/dashboard/: base.css  components.css
static/js/dashboard/: fab.js  main.js
staticfiles/: staticfiles.json
staticfiles/admin/css/: base.css  responsive.css
staticfiles/admin/js/: SelectFilter2.js
staticfiles/core/css/: footer.9579eeab2f3b.css  index-styles.61570642f622.css  index-styles.css  iniciosesion.a5da2cd1f0fd.css  login-styles.39599cef9016.css  login-styles.css  password-recovery.10aaca186213.css  ranking.8680585a6e8d.css  style.0b7d573941f0.css  style.css
staticfiles/core/js/: index-animations.2c9ceb16b743.js  index-animations.ba8bbc7a5be6.js  (+3 more)
staticfiles/css/: gestion_usuarios_mejorado.css
staticfiles/js/: recuperar-password.1b2274948ea7.js
templates/core/: soportusu.html
tests/: README.md  README_PRUEBAS.md  accessibility.spec.js  css-validation.spec.js  generate_test_report.py  javascript-components.spec.js  responsive-design.spec.js  run_design_tests.py  run_manual_tests.py  setup_test_environment.py  test_api.py  test_integracion.py  visual-regression.spec.js
tests/fixtures/: test_data.json
(+46 files in other folders)
